# SPDX-FileCopyrightText: 2022 Jorge Martinez Gil
#
# SPDX-License-Identifier: MIT
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nefusi"
version = "0.1.0"
description = "Interpretable neuro-fuzzy aggregation of semantic similarity measures"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Jorge Martinez-Gil" }]
keywords = [
    "semantic-similarity",
    "semantic-similarity-aggregation",
    "neuro-fuzzy",
    "fuzzy-logic",
    "mamdani",
    "explainable-ai",
    "interpretable-machine-learning",
    "natural-language-processing",
    "semantic-textual-similarity",
    "ensemble",
    "evolutionary-optimization",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = ["numpy>=1.21"]

[project.urls]
Homepage = "https://github.com/jorge-martinez-gil/nefusi"
Repository = "https://github.com/jorge-martinez-gil/nefusi"
Issues = "https://github.com/jorge-martinez-gil/nefusi/issues"

[project.optional-dependencies]
plot = ["matplotlib>=3.4"]
dev = ["pytest>=7", "matplotlib>=3.4"]

[project.scripts]
nefusi = "nefusi.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nefusi = ["data/*.txt", "data/*.license"]
